--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
